Relocated images to /project_data and cleaned up config files

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 ADD OTHER ESSENTIAL STUFF FROM APLUSTOOLS2 Started
 Asked for popup, add callback OR switch (that signal between threads / processes) LATER
 
-Add the styling to default Qt App
+Clean up the imports
